Fix overflow

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ html {
 body {
   line-height: 1.3;
   background: var(--white);
+  overflow-x: hidden;
 }
 
 a {
